# gazeclassify

./: .gitignore  Install_OpenCV_CUDA.md  Installation_Gazeclassify.md  README.md  colab.ipynb  composite_video.py  getting_started.py  main.py  pypi_setup.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  squirrels.py  tutorial_custom_loop_video.py  tutorial_custom_segmentation.py  tutorial_custom_segmentation_image.py  tutorial_custom_segmentation_image_pixellib.py  tutorial_custom_segmentation_video.py  utils.py
.github/: pypi_setup.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: analysis_python.md  analysis_r.md
gazeclassify/: __init__.py  facade.py  facade_confidence.py  facade_custom_algorithm.py  facade_loop.py  utils.py
gazeclassify/classifier/: instance.py  semantic.py
gazeclassify/core/: data_loader.py  facade.py  model.py  models.py  pupil_repository.py  repository.py  serialization.py  serializer.py  utils.py  video.py
gazeclassify/domain/: classification.py  dataset.py  repository.py  results.py  serialization.py  video.py
gazeclassify/example_data/: fixations.csv  gaze_positions.csv
gazeclassify/eyetracker/: csv_loader.py  pupil.py  pupil_data_loader.py  pupil_serializer.py  pupilinvisible.py
gazeclassify/facade/: facade.py
gazeclassify/serialization/: data_loader.py  pupil_repository.py
gazeclassify/serializer/: pupil_data_loader.py  pupil_repository.py  pupil_serializer.py
gazeclassify/service/: analysis.py  deletion.py  (+5 more)
validation_study/: Readme.md  requirements.txt
(+199 files in other folders)
