[metadata]
# replace with your username:
name = gazepy
version = 0.0.1
url = https://github.com/footballdaniel/gazepy
author = Daniel Müller
author_email = daniel@science.football
classifiers =
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Algorithmic eye-tracking analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6